e2fsck: enforce that extra_isize must be a multiple of four
We need to prevent unaligned accesses, so treat any extra_isize which
is not a multiple of four as an bug.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/tests/f_write_ea_toobig_extra_isize/expect.1
+++ b/tests/f_write_ea_toobig_extra_isize/expect.1
@@ -1,4 +1,7 @@
 Pass 1: Checking inodes, blocks, and sizes
+Inode 12 has a extra size (126) which is invalid
+Fix? yes
+
 Pass 2: Checking directory structure
 Directory inode 12, block #0, offset 4: directory corrupted
 Salvage? yes
