--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,11 +1,18 @@
-E2fsprogs 1.43.4-WIP (January 17, 2017) -- 75a790455c43abf
-=======================================
+E2fsprogs 1.43.4 (January 31, 2017)
+===================================
+
+Fix e2fsck to require that the system.data extended attribute is
+always present even for files smaller than 60 bytes, to be consistent
+with the kernel.
 
 Fix a bug which was causing mke2fs -d and fuse2fs to improperly handle
 Posix ACL's.
 
 Fix a bug which could cause mke2fs -d to fail if there is an
 zero-length file in source directory tree.
+
+Clarify the default for the "proceed?" question printed by mke2fs and
+tune2fs.  (Addresses Debian Bug: #852727)
 
 Debugfs will now display project quota information.
 
@@ -31,12 +38,22 @@ have a block size different from the VM page size.
 If the reported device size is absurdly large, mke2fs will now report
 an error instead looping forever or crashing.
 
+Fix various Coverity warnings and other memory leaks in fuse2fs and
+extended attribute manipulation functions.
+
 Replace a test file but which had a "non-commercial use-only"
 copyright permission file with a newer version from the Cyrus imapd
 package which now has a 4-clause BSD license, which was making some
 lawyers nervous, even though the test file in question was only used
 in lib/et's regression testing and was never included in any compiled
 binary.  (Addresses Debian Bug: #840733)
+
+Stop installing mkfs.ext4dev and fsck.ext4dev
+
+Update Chinese, Czech, Polish, Serbian, and Spanish translations and
+add the Finnish and Malay translation.  (Addresses-Debian-Bug: #774379)
+
+Update various man pages (Addresses-Debian-Bug: #852726)
 
 Programming notes
 -----------------
