--- a/po/cs.po
+++ b/po/cs.po
@@ -72,7 +72,7 @@ msgstr ""
 "Project-Id-Version: e2fsprogs 1.43.4\n"
 "Report-Msgid-Bugs-To: tytso@alum.mit.edu\n"
 "POT-Creation-Date: 2017-01-31 17:10-0500\n"
-"PO-Revision-Date: 2017-02-03 12:48+01:00\n"
+"PO-Revision-Date: 2017-07-05 17:01+02:00\n"
 "Last-Translator: Petr Pisar <petr.pisar@atlas.cz>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "Language: cs\n"
@@ -5472,7 +5472,7 @@ msgstr ""
 #: misc/mke2fs.c:1115 misc/tune2fs.c:1007
 #, c-format
 msgid "Invalid filesystem option set: %s\n"
-msgstr "Neplatný sada přepínačů systému souborů: %s\n"
+msgstr "Neplatná sada přepínačů systému souborů: %s\n"
 
 #: misc/mke2fs.c:1127 misc/tune2fs.c:406
 #, c-format
