Revert "mke2fs: fix UI problem caused by fuzzy translations"
This reverts commit f25b334c5093a1a5e2985c7ed58213a52ba06329.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/po/ca.po
+++ b/po/ca.po
@@ -7021,14 +7021,14 @@ msgid "<proceeding>\n"
 msgstr "<continuar>\n"
 
 #: misc/util.c:104
-#, c-format
+#, fuzzy, c-format
 msgid "Proceed anyway (or wait %d seconds) ? (y,N) "
-msgstr "Voleu continuar de totes maneres (o esperar %d segons) ? (s,N)"
+msgstr "Voleu continuar de totes maneres (o esperar %d segons) ? (s,n)"
 
 #: misc/util.c:108
-#,
+#, fuzzy
 msgid "Proceed anyway? (y,N) "
-msgstr "Voleu continuar de totes maneres? (s,N)"
+msgstr "Voleu continuar de totes maneres? (s,n)"
 
 #: misc/util.c:133
 msgid "mke2fs forced anyway.  Hope /etc/mtab is incorrect.\n"
