--- a/po/fi.po
+++ b/po/fi.po
@@ -6460,14 +6460,14 @@ msgid "<proceeding>\n"
 msgstr "<jatketaan>\n"
 
 #: misc/util.c:104
-#, c-format
+#, fuzzy, c-format
 msgid "Proceed anyway (or wait %d seconds) ? (y,N) "
-msgstr "Jatketaanko silti (vai odotetaanko %d sekuntia)? (k,E)"
+msgstr "Jatketaanko silti (vai odotetaanko %d sekuntia)? (k,e)"
 
 #: misc/util.c:108
-#,
+#, fuzzy
 msgid "Proceed anyway? (y,N) "
-msgstr "Jatketaanko silti? (k,E) "
+msgstr "Jatketaanko silti? (k,e) "
 
 #: misc/util.c:133
 msgid "mke2fs forced anyway.  Hope /etc/mtab is incorrect.\n"
