--- a/po/nl.po
+++ b/po/nl.po
@@ -7018,14 +7018,14 @@ msgid "<proceeding>\n"
 msgstr "<verdergaand>\n"
 
 #: misc/util.c:104
-#, c-format
+#, fuzzy, c-format
 msgid "Proceed anyway (or wait %d seconds) ? (y,N) "
-msgstr "Toch doorgaan (of %d seconden wachten)? (j,N) "
+msgstr "Toch doorgaan (of %d seconden wachten)? (j,n) "
 
 #: misc/util.c:108
-#,
+#, fuzzy
 msgid "Proceed anyway? (y,N) "
-msgstr "Toch doorgaan? (j,N) "
+msgstr "Toch doorgaan? (j,n) "
 
 #: misc/util.c:133
 msgid "mke2fs forced anyway.  Hope /etc/mtab is incorrect.\n"
