e2fsck: fix the message printed for the project quota type
Fix a cut and paste error so print_e2fsck_message() correctly prints
the quota type for project quotas.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>
Reported-by: Jakub Bogusz <qboosh@pld-linux.org>

--- a/tests/f_quota_invalid_inum/expect.1
+++ b/tests/f_quota_invalid_inum/expect.1
@@ -2,7 +2,7 @@ Invalid user quota inode 808464432.  Fix? yes
 
 Invalid group quota inode 808464432.  Fix? yes
 
-Invalid group quota inode 808464432.  Fix? yes
+Invalid project quota inode 808464432.  Fix? yes
 
 Pass 1: Checking inodes, blocks, and sizes
 Pass 2: Checking directory structure
