--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+e2fsprogs (1.43.8-2) unstable; urgency=medium
+
+  * Update debian policy version to 4.1.3
+  * Mark library packages as priority: optional
+  * Simplify the debian/rules file and don't build e2fsprogs-l10n
+    unnecessarily
+  * Fix FTBFS on big-endian systems (Closes: #886119)
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Wed, 03 Jan 2018 01:37:09 -0500
+
 e2fsprogs (1.43.8-1) unstable; urgency=medium
 
   * New upstream version
